# BIMobject

./: CMakeLists.txt  Readme.md  generate_project.bat
dependencies/googletest/Debug/: gtest_maind.lib
dependencies/googletest/Release/: gtest_main.lib
source/: CMakeLists.txt  hasTriangles.cpp  hasTriangles.h
tests/: CMakeLists.txt  tests.cpp
